--- a/app/elements/feereceipt-outcard/feereceipt-outcard.html
+++ b/app/elements/feereceipt-outcard/feereceipt-outcard.html
@@ -106,6 +106,7 @@
         this.schoolname=localStorage.getItem("schoolname");
         this.schooladdress=localStorage.getItem("schooladdress");
         this.parentname=localStorage.getItem("curr_sess_parentname");
+        // alert(this.parentname);
       },
       FnHome:function(){
         // alert("hi");
