--- a/app/elements/fees-service/fees-service.html
+++ b/app/elements/fees-service/fees-service.html
@@ -457,7 +457,7 @@
         var split=[];
         var temp=[];
         // alert(localStorage.getItem("curr_sess_installmentpattern"));
-        if(localStorage.getItem("curr_sess_feetypepayment")=='Application fee'||localStorage.getItem("curr_sess_feetypepayment")=='Registration fee'){}
+        if(localStorage.getItem("curr_sess_feetypepayment")=='Application fee'||localStorage.getItem("curr_sess_feetypepayment")=='Registration fee'||localStorage.getItem("curr_sess_feetypepayment")=='Caution deposit'){}
             else{
         if(localStorage.getItem("curr_sess_installmentpattern")=="1"){
         for(var i=0;i<this.studinssplit.length;i++)
