--- a/app/elements/pre-apps/pre-apps.html
+++ b/app/elements/pre-apps/pre-apps.html
@@ -1181,7 +1181,7 @@
             alert('Please check the Father mobile number properly');
           }
           if(mothermobileno == false){
-            this.$.mothermob.validate();
+            this.$.mommobile.validate();
             alert('Please check the Mother mobile number properly');
           }
         }else{
