--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -346,3 +346,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="collection-recon-report/collection-recon-report.html">
 <link rel="import" href="enrollment-dashboard/enrollment-dashboard.html">
 <link rel="import" href="enrollment-dashboard-card/enrollment-dashboard-card.html">
+<link rel="import" href="caution-deposit-card/caution-deposit-card.html">
