--- a/app/elements/grade-count-itemcard/grade-count-itemcard.html
+++ b/app/elements/grade-count-itemcard/grade-count-itemcard.html
@@ -27,7 +27,27 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <div hidden>{{gradestatus}}</div>
         </div>
       </div>
-
+      <div class="modal fade bd-example-modal-lg" id="grade1enquired" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+              <div class="col-md-12">
+                <span class="col-md-8">
+                  <h4 class="center-block event-title" id="Enquiry Details">
+                    Student Detail List
+                  </h4>
+                </span>              
+              </div>
+            </div>
+            <div class="modal-body">
+              <enquiry-details-card> </enquiry-details-card>
+            </div>
+          </div>
+        </div>
+      </div>
         <followup-service id="service"></followup-service>
   </template>
   <script>
